🦈🏬 Updated with Glitch

--- a/port.html
+++ b/port.html
@@ -35,6 +35,9 @@
       <h2 class="🍎">Look Around! Stay A While!</h2>
       <div id="gallery" style="margin-top: 70px">
         <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/unknown.png?v=1671218283741"
+        />
+        <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/BYE%202FF.png?v=1671217379917"
         />
         <img
@@ -63,6 +66,9 @@
         />
         <img
           src="https://cdn.glitch.me/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Untitled_Artwork.png?v=1671217660005"
+        />
+         <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/degenerates-flatline.png?v=1671218015217"
         />
         <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544"
