⛈️😯 Updated with Glitch

--- a/port.html
+++ b/port.html
@@ -34,6 +34,19 @@
       <h1 class="🍏">MY PORTFOLIO!</h1>
       <h2 class="🍎">Look Around! Stay A While!</h2>
       <div id="gallery" style="margin-top: 70px">
+        <video width="320" height="320" controls>
+          <source
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SpookterFilm.mp4?v=1671219380094"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.</video
+        ><video width="320" height="320" controls>
+          <source
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/MortisFilm.mp4?v=1671219416388"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.
+        </video>
         <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/unknown.png?v=1671218283741"
         />
@@ -67,7 +80,7 @@
         <img
           src="https://cdn.glitch.me/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Untitled_Artwork.png?v=1671217660005"
         />
-         <img
+        <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/degenerates-flatline.png?v=1671218015217"
         />
         <img
