--- a/game.html
+++ b/game.html
@@ -31,6 +31,9 @@
     </header>
     <main>
       <h1 class="🍏">MOOBY'S MISADVENTURE!</h1>
+      <h2 class="🍊">
+        Created in 2018 with GBStudio
+      </h2>
       <div class="wrapper" style="margin-top: 90px">
         <div class="h_iframe">
           <iframe
