🍨📗 Updated with Glitch!

--- a/port.html
+++ b/port.html
@@ -48,13 +48,28 @@
           Your browser does not support the video tag.
         </video>
         <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Jordan.png?v=1678899284598"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/I_HEART_NYDC_Recovered.png?v=1678899312559"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/NTC_V1B.png?v=1678899342569"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/NERD_KIRBY.png?v=1678899352800"
+        />
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/image.png?v=1678899363095"
+        />
+        <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/unknown.png?v=1671218283741"
         />
         <img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/BYE%202FF.png?v=1671217379917"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/MONSTERBASH.png?v=1678899853874"
         />
         <img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/CJ%20BIRTHDYA%20PARTY.png?v=1671217389873"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/CJAYBDAY.png?v=1678899638744"
         />
         <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/DEVELOPCRAFT.png?v=1671217422055"
@@ -132,7 +147,7 @@
           />
           Your browser does not support the video tag.</video
         ><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/JD_POSTER_SNUGF2.png?v=1652823313066"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SNUGS.png?v=1678899703402"
           onclick="openModal();currentSlide(16)"
           class="hover-shadow"
         /><img
@@ -174,9 +189,9 @@
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SPOILER_unknown.png?v=1652823653957"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/St._Patricks_Party.png?v=1652823670510"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SERGEI.png?v=1678899776775"
         /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/tjfinal.png?v=1652823686209"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TJAYBDAY.png?v=1678899969986"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TP.png?v=1652823704236"
         /><img
