🌮🏍️ Updated with Glitch

--- a/port.html
+++ b/port.html
@@ -110,13 +110,14 @@
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Brochure_final-01.png?v=1652822856301"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/CASUAL_MOUTH.gif?v=1652822879699"
-        /><video width="320" height="320" controls>
+        /><video width="360" height="640" controls>
           <source
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/E710B9C5-878C-4302-B5A8-D4756400864E.mp4?v=1652822945107"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ImportVideo_153934.006721.mp4?v=1652823280399"
             type="video/mp4"
           />
           Your browser does not support the video tag.</video
-        ><img
+        >
+        <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Flynn_CommV1.2.png?v=1652823024399"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Glitter_Core_Logo.png?v=1652823039789"
@@ -134,19 +135,7 @@
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0950.png?v=1652823133156"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0951.png?v=1652823150671"
-        /><video width="320" height="320" controls>
-          <source
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ImportVideo_153896.881606.mp4?v=1652823218527"
-            type="video/mp4"
-          />
-          Your browser does not support the video tag.</video
-        ><video width="360" height="640" controls>
-          <source
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ImportVideo_153934.006721.mp4?v=1652823280399"
-            type="video/mp4"
-          />
-          Your browser does not support the video tag.</video
-        ><img
+        /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SNUGS.png?v=1678899703402"
           onclick="openModal();currentSlide(16)"
           class="hover-shadow"
@@ -162,8 +151,6 @@
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/MM.png?v=1652823399330"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Mooby_FB.png?v=1652823413575"
-        /><img
-          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Party_Poster_F2.png?v=1652823431692"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Pearl.png?v=1652823452752"
         /><img
